--- a/wiki/fr/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/fr/FEM_ConstraintElectrostaticPotential.html
@@ -75,17 +75,15 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Il y a plusieurs fa&ccedil;ons de lancer la commande&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Condition limite de potentiel &eacute;lectrostatique</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>Mod&egrave;le &rarr; Conditions limites &eacute;lectromagn&eacute;tiques &rarr; <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectrostaticPotential.svg&amp;filetimestamp=20241127174342&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectrostaticPotential.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Condition limite de potentiel &eacute;lectrostatique</b> du menu.</li></ul></li>
 <li><span style="font-size:small;color:green;">version 1.1 et suivantes</span>&nbsp;: s&eacute;lectionnez un type de conditions limites et ses param&egrave;tres&nbsp;:
-<ul><li><i>Dirichlet</i>&nbsp;: s&eacute;lectionnez et sp&eacute;cifiez <i>Potentiel</i> ou <i>Potentiel &eacute;lectromagn&eacute;tique</i>. Vous pouvez d&eacute;finir <i>Infinit&eacute; &eacute;lectrique</i> et <i>Potentiel constant</i>.</li>
-<li><i>Neumann</i>&nbsp;: sp&eacute;cifie la <i>densit&eacute; du flux &eacute;lectrique</i>.</li></ul></li>
+<ul><li><i>Dirichlet</i>&nbsp;: s&eacute;lectionnez et sp&eacute;cifiez <i>Potentiel</i> ou <i>Potentiel &eacute;lectromagn&eacute;tique</i>. Vous pouvez d&eacute;finir <i>Infinit&eacute; &eacute;lectrique</i> (<span style="font-size:small;color:green;">version 1.2 et suivantes</span>: <i>Champ lointain</i>) et <i>Potentiel constant</i>.</li>
+<li><i>Neumann</i>&nbsp;: sp&eacute;cifie la <i>densit&eacute; du flux &eacute;lectrique</i> ou (<span style="font-size:small;"><a href="../fr/Release_notes_1.2.html" title="Release notes 1.2/fr">introduit dans la version 1.2</a></span>) v&eacute;rifiez la <i>densit&eacute; du flux magn&eacute;tique</i> et pr&eacute;cisez ses composantes vectorielles.</li></ul></li>
 <li>Vous pouvez d&eacute;finir un <i>Corps capacitif</i>.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Ajouter</span>.</li>
-<li>Dans la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>, s&eacute;lectionnez l'objet auquel la condition limite doit &ecirc;tre appliqu&eacute;e. <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span>&nbsp;: pour supprimer des objets de la s&eacute;lection, appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Supprimer</span>.</li></ol>
-</div>
+<li>Dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>, s&eacute;lectionnez l'objet auquel la condition limite doit &ecirc;tre appliqu&eacute;e. <span style="font-size:small;"><a href="../fr/Release_notes_1.1.html" title="Release notes 1.1/fr">introduit dans la version 1.1</a></span>&nbsp;: pour supprimer des objets de la s&eacute;lection, appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Supprimer</span>.</li></ol>
 <h2><span class="mw-headline" id="Options">Options</span></h2>
 <p>La fen&ecirc;tre de dialogue propose les param&egrave;tres suivants&nbsp;:
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FEM_ElectrostaticPotential_dialog.png&amp;filetimestamp=20260125143029&amp;.html" class="mw-file-description"><img src="../File/FEM_ElectrostaticPotential_dialog.png" decoding="async" width="489" height="616" class="mw-file-element" data-file-width="489" data-file-height="616"></a></span>
@@ -155,15 +153,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126110911
+Cached time: 20260126111117
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 431/1000000
-Post&#8208;expand include size: 26873/2097152 bytes
-Template argument size: 10915/2097152 bytes
+CPU time usage: 0.100 seconds
+Real time usage: 0.131 seconds
+Preprocessor visited node count: 445/1000000
+Post&#8208;expand include size: 27039/2097152 bytes
+Template argument size: 10924/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -171,19 +169,19 @@ Unstrip post&#8208;expand size: 1823/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.666      1 -total
- 30.87%    9.158      1 Template:GuiCommandContainer
- 24.64%    7.311      1 Template:FEM_Tools_navi/fr
- 18.13%    5.378      2 Template:Navigation_menu_2
- 15.71%    4.661      1 Template:GuiCommandFemInfo/fr
- 12.73%    3.777      1 Template:Userdocnavi/fr
-  7.92%    2.350      2 Template:Docnav/fr
-  6.94%    2.058      1 Template:GuiCommand/fr
-  6.61%    1.961      1 Template:MenuCommand
-  6.12%    1.817      3 Template:Button
+100.00%   33.598      1 -total
+ 28.14%    9.454      1 Template:GuiCommandContainer
+ 23.42%    7.869      1 Template:FEM_Tools_navi/fr
+ 18.31%    6.153      2 Template:Navigation_menu_2
+ 15.50%    5.209      1 Template:GuiCommandFemInfo/fr
+ 14.38%    4.830      1 Template:Userdocnavi/fr
+  8.46%    2.844      2 Template:Docnav/fr
+  7.63%    2.562      1 Template:GuiCommand/fr
+  6.63%    2.229      6 Template:Version/fr
+  6.31%    2.121      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126110911 and revision id 1744274. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:140147-0!canonical and timestamp 20260126111117 and revision id 1744276. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
