--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -34,7 +34,7 @@
 <p>&#1047;&#1072; &#1076;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080;&#1090;&#1077; <b>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;</b> &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; <b>Edit &rarr; Preferences...</b> &#1086;&#1090; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; &#1080;&#1083;&#1080; (<span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>) &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1081;&#1090;&#1077; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;&#1085;&#1072;&#1090;&#1072; &#1082;&#1086;&#1084;&#1073;&#1080;&#1085;&#1072;&#1094;&#1080;&#1103; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>
 +<span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">,</span>. &#1053;&#1072; macOS &#1086;&#1087;&#1094;&#1080;&#1103;&#1090;&#1072; <b>Preferences...</b> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; <b>FreeCAD</b> &#1074;&#1084;&#1077;&#1089;&#1090;&#1086; &#1074; Edit (&#1090;&#1086;&#1074;&#1072; &#1077; &#1084;&#1103;&#1089;&#1090;&#1086;&#1090;&#1086; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1079;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1085;&#1072; Mac).
 </p><p>FreeCAD &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1082;&#1086;&#1085;&#1094;&#1077;&#1087;&#1094;&#1080;&#1103; &#1079;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;, &#1082;&#1098;&#1076;&#1077;&#1090;&#1086; &#1074;&#1089;&#1103;&#1082;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; &#1077; &#1086;&#1090;&#1075;&#1086;&#1074;&#1086;&#1088;&#1085;&#1072; &#1079;&#1072; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1080; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080; &#1080; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;. &#1045;&#1076;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1080;&#1084;&#1072; &#1089;&#1074;&#1086;&#1080; &#1089;&#1086;&#1073;&#1089;&#1090;&#1074;&#1077;&#1085;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;. &#1058;&#1077; &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1074; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1079;&#1072; &#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074; &#1089;&#1087;&#1077;&#1094;&#1080;&#1072;&#1083;&#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072;, &#1072;&#1082;&#1086; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072; &#1077; &#1073;&#1080;&#1083;&#1072; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1072; &#1074; &#1090;&#1077;&#1082;&#1091;&#1097;&#1072;&#1090;&#1072; &#1089;&#1077;&#1089;&#1080;&#1103; &#1085;&#1072; FreeCAD. &#1053;&#1103;&#1082;&#1086;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103;&#1090; &#1087;&#1086;&#1076;&#1076;&#1088;&#1098;&#1078;&#1082;&#1072; &#1085;&#1072; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1080; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080; &#1079;&#1072; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1080; &#1077;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1040;&#1082;&#1086; &#1080;&#1084;&#1072; &#1085;&#1103;&#1082;&#1072;&#1082;&#1074;&#1080; &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;, &#1090;&#1077; &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1090; &#1085;&#1072; &#1077;&#1076;&#1085;&#1072; &#1080;&#1083;&#1080; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1076;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080; &#1074; &#1075;&#1088;&#1091;&#1087;&#1072;&#1090;&#1072; <a href="#Import-Export">Import-Export</a> &#1085;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;.
-</p><p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1077;&#1089;&#1090;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080;, FreeCAD &#1085;&#1077; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="#Workbenchs">Workbenches</a> &#1079;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103;. &#1047;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;, &#1074;&#1080;&#1078;&#1090;&#1077; <a href="#Workbench_related_preferences">Workbench Relatedreferences</a>.
+</p><p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1077;&#1089;&#1090;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080;, FreeCAD &#1085;&#1077; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="#Workbenchs">Workbenches</a> &#1079;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103;. &#1047;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;, &#1074;&#1080;&#1078;&#1090;&#1077; <a href="#Workbench_related_preferences">Workbench Related preferences</a>.
 </p>
 <div class="mw-translate-fuzzy">
 <p>&#1041;&#1077;&#1079; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090;&#1077; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;, &#1097;&#1077; &#1080;&#1084;&#1072;&#1090;&#1077; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087; &#1089;&#1072;&#1084;&#1086; &#1076;&#1086; &#1076;&#1074;&#1077; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1089; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; - &#1086;&#1073;&#1097;&#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1085;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072;, &#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1085;&#1072; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072; (&#1080;&#1079;&#1073;&#1086;&#1088;&#1072;&#1079;&#1103;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;).
@@ -1250,12 +1250,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126133905
+Cached time: 20260126133949
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.218 seconds
-Real time usage: 0.269 seconds
+CPU time usage: 0.232 seconds
+Real time usage: 0.474 seconds
 Preprocessor visited node count: 2474/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
@@ -1266,19 +1266,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.742      1 -total
- 15.88%    8.692    228 Template:MenuCommand
- 13.99%    7.658      1 Template:Userdocnavi/bg
-  7.74%    4.238      3 Template:PropertyView
-  7.42%    4.061     11 Template:Value
-  5.59%    3.060      1 Template:Navigation_menu_2
-  5.45%    2.981     42 Template:Version
-  4.28%    2.345      3 Template:Variable
-  4.16%    2.276      2 Template:Docnav
-  3.40%    1.864     15 Template:FileName
+100.00%   76.480      1 -total
+ 14.12%   10.797      3 Template:PropertyView
+ 12.51%    9.566      1 Template:Userdocnavi/bg
+ 11.54%    8.829    228 Template:MenuCommand
+ 11.20%    8.565     11 Template:Value
+  8.74%    6.681      3 Template:Variable
+  5.97%    4.562     15 Template:FileName
+  5.56%    4.250      1 Template:Navigation_menu_2
+  5.10%    3.900      1 Template:FALSE
+  4.69%    3.587     11 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126133904 and revision id 1744316. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126133949 and revision id 1744318. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
