--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -45,9 +45,7 @@
 </p><p>&#1058;&#1072;&#1079;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1077; &#1072;&#1082;&#1090;&#1091;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1072; &#1079;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; 1.0.
 </p><p><span id="General"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span id=".D0.9E.D0.B1.D1.89.D0.B8.D1.82.D0.B5_.D0.BD.D0.B0.D1.81.D1.82.D1.80.D0.BE.D0.B9.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;&#1090;&#1077;_&#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;">&#1054;&#1073;&#1097;&#1080;&#1090;&#1077; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;</span></h2>
-</div>
+<h2><span id=".D0.9E.D0.B1.D1.89.D0.B8_.D0.BD.D0.B0.D1.81.D1.82.D1.80.D0.BE.D0.B9.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;&#1080;_&#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;">&#1054;&#1073;&#1097;&#1080; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;</span></h2>
 <div class="mw-translate-fuzzy">
 <p>&#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1079;&#1072;&#1088;&#1077;&#1076;&#1080;&#1090;&#1077; FreeCAD &#1074; &#1085;&#1072;&#1095;&#1072;&#1083;&#1086;&#1090;&#1086;, &#1080; &#1085;&#1077; &#1089;&#1090;&#1077; &#1086;&#1090;&#1074;&#1086;&#1088;&#1080;&#1083;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1083;&#1086;&#1090; &#1074;&#1089;&#1077; &#1086;&#1097;&#1077;, &#1090;&#1086; &#1097;&#1077; &#1080;&#1084;&#1072;&#1090;&#1077; &#1084;&#1080;&#1085;&#1080;&#1084;&#1072;&#1083;&#1077;&#1085; &#1073;&#1088;&#1086;&#1080; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1079;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077;. &#1050;&#1072;&#1090;&#1086; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077;&#1090;&#1077; &#1076;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080;/&#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1087;&#1083;&#1086;&#1090;&#1086;&#1074;&#1077;, &#1085;&#1086;&#1074;&#1080; &#1089;&#1077;&#1082;&#1094;&#1080;&#1080; &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1074; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094;&#1072; &#1085;&#1072; &#1085;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;&#1090;&#1077;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1097;&#1077; &#1074;&#1080; &#1088;&#1072;&#1079;&#1088;&#1077;&#1096;&#1072;&#1074;&#1072;&#1090; &#1076;&#1072; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1090;&#1077; &#1087;&#1086;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1085;&#1072; &#1074;&#1089;&#1077;&#1082;&#1080; &#1085;&#1086;&#1074;&#1086;&#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085; &#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085; &#1087;&#1083;&#1086;&#1090;.
 </p>
@@ -1250,13 +1248,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134203
+Cached time: 20260126134227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.263 seconds
-Real time usage: 0.356 seconds
-Preprocessor visited node count: 2474/1000000
+CPU time usage: 0.238 seconds
+Real time usage: 0.291 seconds
+Preprocessor visited node count: 2473/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
 Highest expansion depth: 7/100
@@ -1266,19 +1264,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.256      1 -total
- 13.56%    8.038    228 Template:MenuCommand
- 13.19%    7.814      1 Template:Userdocnavi/bg
-  9.40%    5.568      3 Template:PropertyView
-  8.56%    5.073     11 Template:Value
-  4.86%    2.878     42 Template:Version
-  4.69%    2.778      3 Template:Variable
-  4.60%    2.726      1 Template:Navigation_menu_2
-  4.06%    2.406      2 Template:Docnav
-  4.02%    2.379      9 Template:Button
+100.00%   60.371      1 -total
+ 14.08%    8.502    228 Template:MenuCommand
+ 13.15%    7.937      1 Template:Userdocnavi/bg
+ 10.70%    6.458      3 Template:PropertyView
+  8.78%    5.302     11 Template:Value
+  5.41%    3.265      3 Template:Variable
+  4.70%    2.835      1 Template:Navigation_menu_2
+  4.46%    2.693     42 Template:Version
+  4.07%    2.459      2 Template:Docnav
+  3.87%    2.337     11 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134203 and revision id 1744322. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134227 and revision id 1744324. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
