--- a/wiki/bg/Preferences_Editor.html
+++ b/wiki/bg/Preferences_Editor.html
@@ -37,7 +37,7 @@
 </p><p>&#1047;&#1072; &#1076;&#1072; &#1087;&#1077;&#1089;&#1090;&#1080; &#1088;&#1077;&#1089;&#1091;&#1088;&#1089;&#1080;, FreeCAD &#1085;&#1077; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072; &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="#Workbenchs">Workbenches</a> &#1079;&#1072; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103;. &#1047;&#1072; &#1089;&#1087;&#1080;&#1089;&#1098;&#1082; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;, &#1074;&#1080;&#1078;&#1090;&#1077; <a href="#Workbench_related_preferences">Workbench Related preferences</a>.
 </p><p>&#1040;&#1082;&#1086; &#1085;&#1077; &#1077; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072;, &#1074; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1085;&#1072; Preferences &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072;&#1090; &#1089;&#1077;&#1076;&#1077;&#1084; &#1075;&#1088;&#1091;&#1087;&#1080;: <a href="#General">General</a>, <a href="#Display">Display</a>, <a href="#Workbenches">Workbenches</a>, <a href="#Python">Python</a>, <a href="#Addon_Manager">Addon Manager</a>, <a href="#Import-Export">Import-Export</a> &#1042;&#1089;&#1080;&#1095;&#1082;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1089;&#1072; &#1073;&#1080;&#1083;&#1080; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1080; &#1080; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1080; &#1089;&#1086;&#1073;&#1089;&#1090;&#1074;&#1077;&#1085;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;, &#1097;&#1077; &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1090; &#1087;&#1086;&#1076; &#1090;&#1077;&#1079;&#1080;.
 </p><p>&#1053;&#1072;&#1090;&#1080;&#1089;&#1082;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1073;&#1091;&#1090;&#1086;&#1085;&#1072; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span> &#1074; &#1076;&#1086;&#1083;&#1085;&#1080;&#1103; &#1083;&#1103;&#1074; &#1098;&#1075;&#1098;&#1083; &#1085;&#1072; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074;&#1080;&#1103; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1055;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103; &#1084;&#1077;&#1085;&#1102; (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>) &#1089; &#1086;&#1087;&#1094;&#1080;&#1080; &#1079;&#1072; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072; &#1082;&#1098;&#1084; &#1090;&#1077;&#1093;&#1085;&#1080;&#1090;&#1077; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1052;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1077;&#1082;&#1091;&#1097;&#1072;&#1090;&#1072; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;, &#1090;&#1077;&#1082;&#1091;&#1097;&#1072;&#1090;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072; &#1080;&#1083;&#1080; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;. &#1042; <span style="font-size:small;color:blue;">0.21 and below</span> &#1073;&#1091;&#1090;&#1086;&#1085;&#1098;&#1090; &#1097;&#1077; &#1085;&#1091;&#1083;&#1080;&#1088;&#1072; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080;  <b>all</b> &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;.
-</p><p>Some advanced preferences can only be changed in the <a href="../Std_DlgParameter.html" title="Std DlgParameter">Parameter editor</a>. The <a href="../Fine-tuning.html" title="Fine-tuning">Fine-tuning</a> page lists some of them.
+</p><p>&#1053;&#1103;&#1082;&#1086;&#1080; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1077;&#1085;&#1080; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080; &#1089;&#1072;&#1084;&#1086; &#1074; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; <a href="../Std_DlgParameter.html" title="Std DlgParameter">Parameter</a>. &#1057;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072;&#1090;&#1072; <a href="../Fine-tuning.html" title="Fine-tuning">Fine-tuning</a> &#1080;&#1079;&#1073;&#1088;&#1086;&#1103;&#1074;&#1072; &#1085;&#1103;&#1082;&#1086;&#1080; &#1086;&#1090; &#1090;&#1103;&#1093;.
 </p><p>&#1058;&#1072;&#1079;&#1080; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; &#1077; &#1072;&#1082;&#1090;&#1091;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1072; &#1079;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; 1.0.
 </p><p><span id="General"></span>
 </p>
@@ -1244,12 +1244,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126134439
+Cached time: 20260126134554
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.232 seconds
-Real time usage: 0.325 seconds
+CPU time usage: 0.212 seconds
+Real time usage: 0.440 seconds
 Preprocessor visited node count: 2478/1000000
 Post&#8208;expand include size: 24829/2097152 bytes
 Template argument size: 8113/2097152 bytes
@@ -1260,19 +1260,19 @@ Unstrip post&#8208;expand size: 4109/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.063      1 -total
- 14.76%    9.604      1 Template:Userdocnavi/bg
- 12.77%    8.310    228 Template:MenuCommand
- 10.23%    6.653     11 Template:Value
-  8.67%    5.638      3 Template:PropertyView
-  5.35%    3.483      3 Template:Variable
-  5.13%    3.338      1 Template:Navigation_menu_2
-  5.03%    3.269     42 Template:Version
-  4.21%    2.742     11 Template:Incode
-  4.18%    2.717      2 Template:Docnav
+100.00%  142.758      1 -total
+ 14.70%   20.985      3 Template:PropertyView
+ 12.45%   17.776    228 Template:MenuCommand
+ 12.42%   17.736      1 Template:Userdocnavi/bg
+ 11.83%   16.882     11 Template:Value
+  4.38%    6.253      2 Template:Docnav
+  4.35%    6.208      1 Template:Navigation_menu_2
+  3.99%    5.699     42 Template:Version
+  2.82%    4.021      3 Template:Variable
+  2.73%    3.901     15 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134439 and revision id 1744326. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77971-0!canonical and timestamp 20260126134554 and revision id 1744330. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
